@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-17T16:20:57Z",
+  "timestamp" : "2022-11-18T01:22:26Z",
   "count_outdated" : 666,
   "uniques_outdated" : 379,
-  "count" : 685,
+  "count" : 686,
   "uniques" : 387,
   "clones" : [
     {
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2022-11-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
