@@ -1,3 +1,11 @@
+2022-11-18T01:22:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3493386898 # 1038
+* notice: last 14d: unq all: 4 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 379 666 / 387 685
+* notice: next accum: outdated-unq outdated-all / unq all: 379 666 / 387 686
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-11-17]
+
 2022-11-17T16:20:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3490049818 # 1037
 * notice: last 14d: unq all: 4 19
